--- a/views/eaglefuel_view.xml
+++ b/views/eaglefuel_view.xml
@@ -182,7 +182,7 @@
                                     <field name="pistole_ids">
                                         <tree editable="bottom">
                                             <field name="number"/>
-                                            <field name="product_id"/>
+                                            <!--<field name="product_id"/>-->
                                             <field name="description"/>
                                         </tree>
                                     </field>
@@ -254,7 +254,7 @@
                                 </group>
                          </group>
                           <notebook>
-                                <page string="Pompes">
+                           <!--     <page string="Pompes">
                                     <field name="pompe_ids">
                                         <tree editable="bottom">
                                             <field name="nom"/>
@@ -263,7 +263,7 @@
                                         </tree>
                                     </field>
 
-                                </page>
+                                </page> -->
                         </notebook>
                     </sheet>
                 </form>
