--- a/views/eaglefuel_view.xml
+++ b/views/eaglefuel_view.xml
@@ -29,8 +29,19 @@
                                     <field name="manager_id"/>
                                 </group>
                             </group>
+                        <notebook>
+                                <page string="Employés">
+                                    <field name="employee_ids">
+                                        <tree editable="bottom">
+                                            <field name="name"/>
+                                            <field name="phone"/>
+                                             <field name="gender"/>
+                                             <field name="job_title"/>
 
-                            <notebook>
+                                        </tree>
+                                    </field>
+                                </page>
+
                                 <page string="Produits">
                                     <field name="product_ids">
                                         <tree editable="bottom">
