--- a/views/eaglefuel_view.xml
+++ b/views/eaglefuel_view.xml
@@ -306,7 +306,6 @@
 <record model="ir.ui.view" id="station_form_view">
      <field name="name">eaglefuel.station.form</field>
      <field name="model">eaglefuel.station</field>
-     <field name="type">form</field>
      <field name="arch" type="xml">
              <form string="Station">
                   <header>
@@ -332,4 +331,48 @@
              </form>
      </field>
 </record>
+
+<record model="ir.ui.view" id="pompe_form_view">
+    <field name="name">eaglefuel.pompe.form</field>
+    <field name="model">eaglefuel.pompe</field>
+    <field name="arch" type="xml">
+        <form string="Ilo">
+            <header></header>
+            <sheet>
+                <group>
+                    <field name="pompe_number"/>
+                    <field name="description"/>
+                    <field name="ilo_id"/>
+                </group>
+            </sheet>
+        </form>
+    </field>
+</record>
+
+<!--<record model="ir.actions.act_window" id="pompe_action">-->
+<!--    <field name="pompe_number"></field>-->
+<!--    <field name="name">Pompe</field>-->
+<!--    <field name="res_model">eaglefuel.pompe</field>-->
+<!--    <field name="view_mode">tree,form</field>-->
+<!--</record>-->
+<!--<menuitem name="pompe" id="pompe_root" sequence="7"/>-->
+<!--<menuitem name="pompes" id="sub_pompe_root" parent="pompe_root"/>-->
+<!--<menuitem name="pompe" id="sub_pompe_root" parent="sub_pombe_root" action="pompe_action"/>-->
+
+
+
+<record model='ir.actions.act_window' id='station_action'>
+       <field name="name">Stations</field>
+       <field name="res_model">eaglefuel.station</field>
+       <field name="view_mode">tree,form,kanban</field>
+       <field name="help" type ="html">
+            <p class="o_view_nocontent_smiling_face"></p>
+       </field>
+</record>
+
+<menuitem name="Gas Station" id="station_root" sequence="7"/>
+
+<menuitem name="Stations" id="sub_station_root" parent="station_root"/>
+
+<menuitem name="Station" id="sub_sub_station_root" parent="sub_station_root" action="station_action"/>
 </odoo>
