--- a/views/eaglefuel_view.xml
+++ b/views/eaglefuel_view.xml
@@ -368,6 +368,7 @@
 <menuitem name="Stations" id="sub_station_root" parent="station_root"/>
 <menuitem name="Station" id="sub_sub_station_root" parent="sub_station_root" action="station_action"/>
 
+<!--  vue formulaire de la classe ilo  -->
 
 <record model="ir.ui.view" id="ilo_form_view">
      <field name="name">eaglefuel.ilo.form</field>
@@ -426,6 +427,8 @@
 
 <menuitem name="ilo" id="sub_sub_ilo_root" parent="sub_ilo_root" action="ilo_action"/>
 
+    <!--  vue formulaire de la classe pompe  -->
+
 <record model="ir.ui.view" id="pompe_form_view">
     <field name="name">eaglefuel.pompe.form</field>
     <field name="model">eaglefuel.pompe</field>
@@ -477,6 +480,7 @@
 
 <menuitem name="Pompes" id="sub_pompe_root" parent="station_root"/>
 <menuitem name="Pompes" id="sub_sub_pompe_root" parent="sub_pompe_root" action="pompe_action"/>
+<!--  vue formulaire de la classe pistole  -->
 
 <record model="ir.ui.view" id="pistole_form_view">
     <field name="name">eaglefuel.pistole.form</field>
@@ -524,6 +528,7 @@
 <menuitem name="Pistole" id="sub_pistole_root" parent="station_root"/>
 <menuitem name="Pistole" id="sub_sub_pistole_root" parent="sub_pistole_root" action="pistole_action"/>
 
+<!--  vue formulaire de la classe compteur  -->
 
 <record model="ir.ui.view" id="compteur_form_view">
     <field name="name">eaglefuel.compteur.form</field>
@@ -571,8 +576,7 @@
 <menuitem name="Compteur" id="sub_compteur_root" parent="station_root"/>
 <menuitem name="Compteur" id="sub_sub_compteur_root" parent="sub_compteur_root" action="compteur_action"/>
 
-
-
+<!--  vue formulaire de la classe cuve  -->
 
 <record model="ir.ui.view" id="cuve_list_view">
     <field name="name">eaglefuel.cuve.list</field>
