--- a/views/cuve_view.xml
+++ b/views/cuve_view.xml
@@ -4,6 +4,7 @@
         <field name="model">eaglefuel.cuve</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="ref"/>
                 <field name="longeur_regle"/>
                 <field name="width"/>
                 <field name="length"/>
@@ -22,6 +23,7 @@
                 <sheet>
                     <group>
                         <group>
+                            <field name="ref"/>
                             <field name="longeur_regle"/>
                             <field name="width"/>
                             <field name="length"/>
@@ -49,51 +51,4 @@
 
     <menuitem name="Cuves" id="sub_cuve_root" parent="station_root"/>
     <menuitem name="Cuve" id="sub_sub_compteur_root" parent="sub_cuve_root" action="cuve_action"/>
-
-<!--view for jauge-->
-    <record model="ir.ui.view" id="jauge_list_view">
-        <field name="name">eaglefuel.jauge.list</field>
-        <field name="model">eaglefuel.jauge</field>
-        <field name="arch" type="xml">
-            <tree>
-                <field name="mesure_regle"/>
-                <field name="cuve_id"/>
-                <field name="date_jauge"/>
-            </tree>
-        </field>
-    </record>
-    <record model="ir.ui.view" id="jauge_form_view">
-        <field name="name">eaglefuel.jauge.form</field>
-        <field name="model">eaglefuel.jauge</field>
-        <field name="arch" type="xml">
-            <form>
-                <header></header>
-                <sheet>
-                    <group>
-                        <group>
-                            <field name="mesure_regle"/>
-                            <field name="date_jauge"/>
-                            <field name="cuve_id"/>
-                        </group>
-                    </group>
-<!--                    <notebook>-->
-<!--                    <page string="Station parent">-->
-<!--                        <field name="station_id"/>-->
-<!--                    </page>-->
-<!--                </notebook>-->
-                </sheet>
-            </form>
-        </field>
-    </record>
-    <record model='ir.actions.act_window' id='jauge_action'>
-           <field name="name">jauge</field>
-           <field name="res_model">eaglefuel.jauge</field>
-           <field name="view_mode">tree,form,kanban</field>
-           <field name="help" type ="html">
-                <p class="o_view_nocontent_smiling_face"></p>
-           </field>
-    </record>
-
-    <menuitem name="Jauge" id="sub_jauge_root" parent="station_root"/>
-    <menuitem name="Jauge" id="sub_sub_cuve_root" parent="sub_jauge_root" action="jauge_action"/>
 </odoo>
