--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -8,17 +8,17 @@
                 <sheet>
                     <group>
                         <group>
-                        <field name="pompe_number"/>
-                        <field name="description"/>
-                        <field name="prix_initial"/>
-                    </group>
+                            <field name="ref"/>
+                            <field name="pompe_number"/>
+                            <field name="description"/>
+                        </group>
+                        <group>
+                            <field name="ilo_id"/>
+                        </group>
                     </group>
                     <notebook>
                         <page string="Liste des pistoles">
                             <field name="pistole_id"/>
-                        </page>
-                        <page string="Ilo parent">
-                            <field name="ilo_id"/>
                         </page>
                         <page string="Liste des compteurs">
                             <field name="compteur_id"/>
@@ -34,13 +34,12 @@
         <field name="model">eaglefuel.pompe</field>
         <field name="arch" type="xml">
             <tree string="Pompe">
-                        <field name="pompe_number"/>
-                        <field name="description"/>
-                        <field name="ilo_id"/>
-                        <field name="pistole_id"/>
-                        <field name="compteur_id"/>
-                        <field name="prix_initial"/>
-
+                <field name="ref"/>
+                    <field name="pompe_number"/>
+                    <field name="description"/>
+                    <field name="ilo_id"/>
+                    <field name="pistole_id"/>
+                    <field name="compteur_id"/>
             </tree>
         </field>
     </record>
