--- a/views/compteur_view.xml
+++ b/views/compteur_view.xml
@@ -49,7 +49,7 @@
     <record model="ir.actions.act_window" id="compteur_action">
         <field name="name">Compteur</field>
         <field name="res_model">eaglefuel.compteur</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,graph</field>
     </record>
 
     <menuitem name="Compteurs" id="sub_compteur_root" parent="station_root"/>
