ajout de la fonction name_get au compteur

--- a/views/ilo_view.xml
+++ b/views/ilo_view.xml
@@ -14,11 +14,11 @@
                               <field name="nom"/>
                               <field name="description"/>
                           </group>
+                         <group>
+                             <field name="station_id"/>
+                         </group>
                       </group>
                          <notebook>
-                             <page string="Station parent">
-                               <field name="station_id"/>
-                             </page>
                              <page string="Liste des pompes">
                                  <field name="pompe_id"/>
                              </page>
