--- a/views/jauge_view.xml
+++ b/views/jauge_view.xml
@@ -47,7 +47,7 @@
            </field>
     </record>
 
-    <menuitem name="Jauge" id="sub_jauge_root" parent="station_root"/>
+    <menuitem name="Jauges" id="sub_jauge_root" parent="station_root"/>
     <menuitem name="Jauge" id="sub_sub_jauge_root" parent="sub_jauge_root" action="jauge_action"/>
 
 </odoo>
