finissons de l'ajout de la fonction name_get

--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -20,6 +20,9 @@
                         <page string="Liste des pistoles">
                             <field name="pistole_id"/>
                         </page>
+                        <page string="Les services pompistes">
+                            <field name="servicepompiste_id"/>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
