--- a/views/servicepompiste_view.xml
+++ b/views/servicepompiste_view.xml
@@ -15,6 +15,17 @@
                             <field name="temps_debut" widget="float_time"/>
                             <field name="temps_fin" widget="float_time"/>
                             <field name="duree" widget="float_time"/>
+                            <field name="index_depart"/>
+                            <field name="index_arrive"/>
+                    </group>
+                    <group>
+                        <field name="litrage"/>
+                        <field name="montant_total_vendu"/>
+                        <field name="litrage_credit"/>
+                        <field name="montant_credit"/>
+                        <field name="montant_a_verse"/>
+                        <field name="montant_verse"/>
+                        <field name="ecart"/>
                     </group>
                     <group>
                        <field name="pompe_id"/>
@@ -48,6 +59,15 @@
                 <field name="pompiste_id"/>
                 <field name="pompe_id"/>
                 <field name="versement_id"/>
+                <field name="index_depart"/>
+                <field name="index_arrive"/>
+                <field name="litrage"/>
+                <field name="montant_total_vendu"/>
+                <field name="litrage_credit"/>
+                <field name="montant_credit"/>
+                <field name="montant_a_verse"/>
+                <field name="montant_verse"/>
+                <field name="ecart"/>
             </tree>
         </field>
     </record>
